# pgexporter

./: .dockerignore  .gitignore  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  README.md  clang-format.sh  pgexporter.spec  uncrustify.cfg  uncrustify.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rpm-build.yml
cmake/: FindCheck.cmake  FindPdflatex.cmake  FindXelatex.cmake
contrib/docker/: Dockerfile.alpine  Dockerfile.rocky9  pgexporter.conf
contrib/docker/rpm/: Dockerfile  README.md  build.sh
contrib/grafana/: README.md  TESTING.md  docker-compose.yml  postgresql_dashboard.json  postgresql_dashboard_pg13.json  postgresql_dashboard_pg14.json  postgresql_dashboard_pg15.json  postgresql_dashboard_pg16.json  postgresql_dashboard_pg17.json  postgresql_dashboard_pg18.json  prometheus.yml
contrib/grafana/provisioning/dashboards/: dashboards.yml
contrib/json/: postgresql-13.json  postgresql-14.json  postgresql-15.json  postgresql-16.json  postgresql-17.json  postgresql-18.json
contrib/prometheus_scrape/: README.md  extra.info  prometheus.py  prometheus.sh
contrib/shell_comp/: pgexporter_comp.bash  pgexporter_comp.zsh
contrib/views/: pg_system_views_extractor.sql
contrib/yaml/: alerts.yaml  pgexporter_alerts.yaml  postgresql-10.yaml  postgresql-11.yaml  postgresql-12.yaml  postgresql-13.yaml  postgresql-14.yaml  postgresql-15.yaml  postgresql-16.yaml  postgresql-17.yaml  postgresql-18.yaml
doc/: ALERT.md  ARCHITECTURE.md  BRIDGE.md  CLI.md  CMakeLists.txt  CONFIG.md  CONFIGURATION.md  CONSOLE.md  DEVELOPERS.md  DOCKER.md  ENCRYPTION.md  GETTING_STARTED.md  HISTORY.md  MIGRATION.md  RPM.md  TEST.md  VIEWS.md  YAML.md
doc/etc/: pgexporter.conf  pgexporter.service
doc/man/: pgexporter-admin.1.rst  pgexporter-cli.1.rst  pgexporter-config.1.rst  pgexporter.1.rst  pgexporter.conf.5.rst
doc/manual/: 01-introduction.md  02-installation.md  97-acknowledgement.md  98-acknowledgement.md  98-licenses.md  99-references.md  dev-00-head.md  dev-01-git.md  dev-02-architecture.md  dev-03-rpm.md  dev-04-building.md  dev-05-code_covearge.md  dev-06-core_api.md  user-00-head.md  user-01-quickstart.md  user-02-configuration.md  user-10-cli.md  user-11-prometheus.md  user-12-yaml.md  user-13-extension.md  user-13-json.md  user-14-extension.md  user15-docker.md
doc/manual/advanced/: 00-frontpage.md  01-preface.md  02-introduction.md  03-installation.md  04-custom_metrics.md  05-grafana.md  06-tls.md  07-bridge.md  09-docker.md  97-acknowledgement.md  98-licenses.md  99-references.md
doc/manual/en/: 00-frontpage.md  01-introduction.md  02-installation.md  03-quickstart.md  04-configuration.md  05-cli.md  06-prometheus.md  07-pgexporter_ext.md  08-extension.md  08-extensions.md  09-grafana.md  10-console.md  10-custom_metrics.md  12-alerts.md  12-tls.md  13-docker.md  13-tls.md  14-bridge.md  16-history.md  20-config-generator.md  71-git.md  72-architecture.md  73-rpm.md  74-building.md  75-code_coverage.md  76-core_api.md  77-test.md  97-acknowledgement.md  99-references.md
doc/tutorial/: 01_install.md  02_custom_metrics.md  03_grafana.md  04_tls.md  05_bridge.md  06_docker.md  07_prometheus.md
extensions/: CMakeLists.txt  citus.yaml  pg_buffercache.yaml  pg_qualstats.yaml  pg_stat_kcache.yaml  pg_stat_monitor.yaml  pg_stat_statements.yaml  pg_wait_sampling.yaml  pgcrypto.yaml  pgexporter_ext.yaml  pgstattuple.yaml  postgis.yaml  postgis_raster.yaml  postgis_topology.yaml  timescaledb.yaml  vector.yaml
scripts/: generate_contrib.py  generate_dashboards.py  generate_yaml_json.py
src/: CMakeLists.txt  admin.c  cli.c  config.c  main.c
src/include/: aes.h  alert_configuration.h  art.h  bridge.h  bzip2_compression.h  cache.h  cmd.h  configuration.h  connection.h  console.h  deque.h  ev.h  ext_query_alts.h  extension.h  fips.h  gzip_compression.h  history.h  history_sqlite.h  http.h  http_server.h  internal.h  json.h  json_configuration.h  logging.h  lz4_compression.h  management.h  memory.h  message.h  network.h  pg_query_alts.h  pgexporter.h  prometheus.h  prometheus_client.h  queries.h  query_alts.h  remote.h  security.h  server.h  shmem.h  status.h  (+5 more)
src/libpgexporter/: aes.c  alert_configuration.c  art.c  bridge.c  bzip2_compression.c  cache.c  cmd.c  configuration.c  connection.c  console.c  deque.c  ev.c  ext_query_alts.c  extension.c  fips.c  gzip_compression.c  history.c  history_sqlite.c  http.c  http_server.c  json.c  json_configuration.c  logging.c  lz4_compression.c  management.c  memory.c  message.c  network.c  pg_query_alts.c  prometheus.c  prometheus_client.c  queries.c  query_alts.c  remote.c  security.c  server.c  shmem.c  status.c  utf8.c  utils.c  (+3 more)
test/: CMakeLists.txt  check.sh  runner.c  testsuite.sh  tsclient.c
test/conf/alert/: alerts_off.conf  alerts_on.conf  merge.yaml  servers.yaml  valid.yaml
test/include/: html_report.h  mctf.h  tsclient.h  tscommon.h  tssuite.h
test/libpgexportertest/: html_report.c  mctf.c  mctf_logslice.c  mctf_logslice.h  tsclient.c  tscommon.c
test/postgresql/src/postgresql17/: Dockerfile  Makefile
test/postgresql/src/postgresql17/conf/: pg_hba.conf  postgresql.conf  setup.sql
test/testcases/: pgexporter_test_1.c  pgexporter_test_1.h  pgexporter_test_2.c  pgexporter_test_2.h  pgexporter_test_3.c  pgexporter_test_3.h  test_aes.c  test_alert.c  test_bridge.c  test_cache.c  test_cli.c  test_configuration.c  test_connection.c  test_database.c  test_extensions.c  test_history.c  test_http.c  test_management.c  test_message_complete.c  test_metrics.c  test_utils.c
